--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-fragment": "^1.5.1",
+    "vue-js-modal": "^2.0.0-rc.6",
     "vue-notification": "^1.3.20",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
