--- a/package.json
+++ b/package.json
@@ -38,11 +38,14 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^6.2.2",
-    "node-sass": "^4.12.0",
     "prettier": "^1.19.1",
-    "sass-loader": "^8.0.2",
+    "sass": "^1.51.0",
+    "sass-loader": "^10.1.1",
     "stylus": "^0.54.8",
     "stylus-loader": "^3.0.2",
     "vue-template-compiler": "^2.6.11"
+  },
+  "engines": {
+    "node": "16.x"
   }
 }
