--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,1 @@
-VITE_SERVER_BASE_URL=https://fast-badlands-02208.herokuapp.com/api
+VITE_SERVER_BASE_URL=https://my-native-buddy-server.onrender.com/api
